# adaptation.devices.nfc-plugin-nxp

./: 98-nfc-plugin-nxp.rules  CMakeLists.txt  LICENSE  NOTICE  project.config
Linux_x86/: phDal4Nfc.c  phDal4Nfc_debug.h  phDal4Nfc_i2c.c  phDal4Nfc_i2c.h  phDal4Nfc_link.h  phDal4Nfc_messageQueueLib.c  phDal4Nfc_message_glib.c  phDal4Nfc_uart.c  phDal4Nfc_uart.h  phOsalNfc.c  phOsalNfc_Common.h  phOsalNfc_Timer.c  phOsalNfc_Utils.c
debian/: changelog  control  libnfc-plugin-nxp-0.install.in  libnfc-plugin-nxp-0.postinst.in  rules
doxygen/: doxygen.conf
inc/: nfc_custom_config.h  phDbgTrace.h  phNfcCompId.h  phNfcConfig.h  phNfcHalTypes.h  phNfcInterface.h  phNfcIoctlCode.h  phNfcLlcpTypes.h  phNfcStatus.h  phNfcTypes.h
packaging/: nfc-plugin-nxp.spec
src/: nfc_debug_private.h  nfc_osal_deferred_call.h  phDal4Nfc.h  phDal4Nfc_DeferredCall.h  phDal4Nfc_messageQueueLib.h  phDal4Nfc_message_glib.h  phDnldNfc.c  phDnldNfc.h  phFriNfc.h  phFriNfc_DesfireFormat.c  phFriNfc_DesfireFormat.h  phFriNfc_DesfireMap.c  phFriNfc_DesfireMap.h  phFriNfc_FelicaMap.c  phFriNfc_FelicaMap.h  phFriNfc_ISO15693Format.c  phFriNfc_ISO15693Format.h  phFriNfc_ISO15693Map.c  phFriNfc_ISO15693Map.h  phFriNfc_IntNdefMap.c  phFriNfc_IntNdefMap.h  phFriNfc_Llcp.c  phFriNfc_Llcp.h  phFriNfc_LlcpMac.c  phFriNfc_LlcpMac.h  phFriNfc_LlcpMacNfcip.c  phFriNfc_LlcpMacNfcip.h  phFriNfc_LlcpTransport.c  phFriNfc_LlcpTransport.h  phFriNfc_LlcpTransport_Connection.c  phFriNfc_LlcpTransport_Connection.h  phFriNfc_LlcpTransport_Connectionless.c  phFriNfc_LlcpTransport_Connectionless.h  phFriNfc_LlcpUtils.c  phFriNfc_LlcpUtils.h  phFriNfc_MapTools.c  phFriNfc_MapTools.h  phFriNfc_MifStdFormat.c  phFriNfc_MifStdFormat.h  phFriNfc_MifULFormat.c  (+98 more)
src/cutils/: log.h
src/oem/: oem_nxp.c
