CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(nfc-plugin C)

MESSAGE("build nfc-plugin-nxp")

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Linux_x86)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Linux_x86 SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/oem SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRCS)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE(FindPkgConfig)

pkg_check_modules(pkgs REQUIRED glib-2.0 gobject-2.0 dlog nfc-common-lib vconf)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

# this for NFC flag

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fno-strict-aliasing -pipe -fomit-frame-pointer -Wall -Wno-trigraphs -Werror-implicit-function-declaration -Wl,-zdefs -fvisibility=hidden")
SET(ARM_CFLAGS "${ARM_CFLAGS} -mapcs -mno-sched-prolog -mabi=aapcs-linux -mno-thumb-interwork -msoft-float -Uarm -fno-common -fpic")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror-implicit-function-declaration")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
#SET(CMAKE_C_FLAGS_RELEASE "-O2")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ARM_CFLAGS}")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DNFC_TIMER_CONTEXT")
ADD_DEFINITIONS("-DTIZEN_PUBLIC")
ADD_DEFINITIONS("-DSLP_DEBUG")
ADD_DEFINITIONS("-DDAL_TRACE")
# this for NFC STACK compile
ADD_DEFINITIONS("-D_GNU_SOURCE")
ADD_DEFINITIONS("-DPHPN54X -DNXP_MESSAGING -DINCLUDE_DALINIT_DEINIT -DNFC_CUSTOM_CONFIG_INCLUDE")
ADD_DEFINITIONS("-DG_IDLE_ADD_MSGQ")
ADD_DEFINITIONS("-DUPDATE_NFC_ACTIVE")
#ADD_DEFINITIONS("-DNFC_CUSTOM_CONFIG_INCLUDE")
ADD_DEFINITIONS("-DPH_FRINFC_MAP_ISO15693_DISABLED")
ADD_DEFINITIONS("-DPH_FRINFC_FMT_ISO15693_DISABLED")

# this for debug
# PHDBG_TRACES must define to use PHDBG_TRACES_LEVEL_0 to 2
#ADD_DEFINITIONS("-DDEBUG_SLP -DPHDBG_TRACES -DPHDBG_TRACES_LEVEL_2 -DDAL_TRACE -DDEBUG -DLLC_TRACE")
ADD_DEFINITIONS("-DFRI_CUSTOM_LOG")
ADD_DEFINITIONS("-DFRI_CUSTOM_LOG_ONLY_I2C")

ADD_DEFINITIONS("-DFW_104")

ADD_DEFINITIONS("-DNFC_DEBUG_USE_DLOG")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} "-ldl -lrt")

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
